# django-chatbot-playground

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  bun.lockb  lambda.Dockerfile  package.json  pyproject.toml  sst.config.ts
chat/: admin.py  asgi.py  awslambda.py  awslambda_settings.py  commons.py  settings.py  urls.py
chat/api/: admin.py  ai.py  apps.py  models.py  permissions.py  serializers.py  signals.py  views.py
chat/api/migrations/: 0001_initial.py  0002_remove_messages_conversation_remove_notes_tags_and_more.py  0003_alter_message_function_call_alter_message_name.py  0004_alter_note_tags.py  0005_rename_user_conversation_owner_and_more.py
chat/commons/: cache.py  cuid.py
