[tool.poetry]
name = "django-chatbot-playground"
version = "0.1.0"
description = ""
authors = ["ndilsou <nasoungadoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.1"
dj-rest-auth = "^5.0.2"
django-allauth = "^0.61.1"
litellm = "^1.34.12"
anthropic = "^0.21.3"
openai = "^1.14.3"
cohere = "^5.1.7"
instructor = "^0.6.8"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
django-click = "^2.3.0"
channels = { extras = ["daphne"], version = "^4.0.0" }
boto3 = "^1.34.73"
uvloop = "^0.19.0"
cuid2 = "^2.0.0"
django-structlog = "^8.0.0"
djangorestframework-camel-case = "^1.4.2"
drf-orjson-renderer = "^1.7.2"
rich = "^13.7.1"
drf-nested-routers = "^0.93.5"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
aws-lambda-powertools = "^2.36.0"
momento = "^1.20.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ipython = "^8.22.2"
poethepoet = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "python manage.py runserver"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
flightcheck = "python manage.py check --deploy"
run = "python -m gunicorn chat.asgi:application -k uvicorn.workers.UvicornWorker"
aws-sso = "aws sso login --profile sandbox-sso"
